--- a/src/components/header/Navbar.css
+++ b/src/components/header/Navbar.css
@@ -26,7 +26,7 @@
   list-style: none;
 }
 
-.head2 ul li p {
+.head2 ul li a {
   font-size: 15px;
   font-weight: 400;
   line-height: 20px;
@@ -37,6 +37,6 @@
     margin-top: -22px;
 }
 
-.head2 ul .home {
+.head2 ul li a.active {
     color: #35B8BE;
 }
